styles/globals.css
:root {
  --neon-pink: #F900BF;
  --neon-green: #00FFAB;
  --dark-pink: #A91079;
  --dark-gray: #121212;
  --dark-green: #14C38E;
  --purple-blue: #293462;
  --gray: #343434;
  --error: #D61C4E;
}

html,
body {
  color: var(--neon-pink);
  background: var(--dark-gray);
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  overflow-x: hidden;
}

h1 {
  font-size: 3em;
  margin: 0;
  padding: 0;
}

h2 {
  font-weight: 500;
  margin: 0;
  padding: 0;
}

p {
  font-weight: 200;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

#main {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  width: 100%;
}

input:focus {
  outline: none;
  border: 1px solid var(--neon-green);
  box-shadow: 0 0 5px var(--neon-green);
}

.loadingContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  width: 100%;
  padding-top: 7em;
}

/* @media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: var(--neon-pink);
    background: #121212;
  }
} */

